--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,15 +9,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome!"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <!-- Strings related to home -->
+    <string name="trending">Trending In </string>
 
     <!-- Strings related to restaurants -->
     <string name="turtle_bay">Turtle Bay Swansea</string>
@@ -32,4 +25,22 @@
     <string name="nandos">Nandos Swansea</string>
     <string name="tgi_fridays">TGI Fridays - Swansea</string>
     <string name="msg">are the best!</string>
+
+    <!-- Strings related to login -->
+    <string name="register">REGISTER</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="have_account">Already have an account? </string>
+    <string name="no_account">Don\'t have an account? </string>
+    <string name="sign_up"><u>Sign Up</u></string>
+    <string name="login">Login</string>
+    <string name="forgot_password">Forgot Password?</string>
+
+
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome!"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
 </resources>
