--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,12 +30,22 @@
     <string name="login">Login</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
+    <string name="prompt_confirm_password">Confirm Password</string>
     <string name="no_account">Don\'t have an account? </string>
+    <string name="sign_up_no_u">Sign Up</string>
     <string name="sign_up"><u>Sign Up</u></string>
+    <string name="sign_in"><u>Login</u></string>
     <string name="register">Register</string>
     <string name="forgot_password">Forgot Password?</string>
     <string name="have_account">Already have an account? </string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="login_failed">"Couldn't log you in"</string>
+    <string name="register_failed">"Couldn't sign you up"</string>
+    <string name="register_success">Successfully created</string>
+
+    <string name="password_too_short">Password must be at least 8 characters</string>
+    <string name="password_no_match">"Password doesn't match"</string>
+    <string name="empty_email">"Please enter a valid email"</string>
+    <string name="empty_password">"Please enter a password"</string>
 </resources>
