--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="tgi_fridays">TGI Fridays - Swansea</string>
     <string name="msg">are the best!</string>
 
-    <!-- Strings related to login -->
+    <!-- Strings related to review -->
     <string name="restaurant_details">Restaurant</string>
     <string name="restaurant">Restaurant Name</string>
     <string name="restaurant_location">Restaurant Location</string>
@@ -35,8 +35,10 @@
     <string name="review_title">Review Title</string>
     <string name="pics">Upload Photos</string>
     <string name="review_body">Review</string>
+    <string name="submit">Submit Review</string>
 
     <!-- Strings related to login -->
+    <string name="go_to_account">Go To Account</string>
     <string name="login">Login</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -54,8 +56,12 @@
     <string name="register_failed">"Couldn't sign you up"</string>
     <string name="register_success">Successfully created</string>
 
+    <!-- Strings related to register -->
     <string name="password_too_short">Password must be at least 8 characters</string>
     <string name="password_no_match">"Password doesn't match"</string>
     <string name="empty_email">"Please enter a valid email"</string>
     <string name="empty_password">"Please enter a password"</string>
+    <string name="prompt_displayName">Display Name</string>
+    <string name="prompt_firstName">"First Name"</string>
+    <string name="prompt_lastName">"Last Name"</string>
 </resources>
