Made review screen look nicer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
 
     <string name="review_details">Review</string>
     <string name="review_title">Review Title</string>
-    <string name="pics">Upload Photos</string>
+    <string name="pics">Add Photos</string>
     <string name="review_body">Review</string>
     <string name="submit">Submit Review</string>
 
