--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,10 @@
     <string name="msg">are the best!</string>
 
     <!-- Strings related to review -->
+    <string name="need_login">Sorry you need to be logged in to view this</string>
+    <string name="reviews">Draft Reviews</string>
+
+    <string name="new_review">New Review</string>
     <string name="restaurant_details">Restaurant</string>
     <string name="restaurant">Restaurant Name</string>
     <string name="restaurant_location">Restaurant Location</string>
@@ -35,6 +39,7 @@
     <string name="review_title">Review Title</string>
     <string name="pics">Add Photos</string>
     <string name="review_body">Review</string>
+    <string name="save">Save</string>
     <string name="submit">Submit Review</string>
 
     <!-- Strings related to login -->
